# rust-app

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose-stubbed.yaml  docker-compose.yaml  docker-compose.yml  spec.yaml
.github/workflows/: build-docker-image.yml  docker-image.yml  on-pr.yml  publish-docker-image.yml  rust.yml  service-ci.yml
configloader/: Cargo.toml  README.md
configloader/src/: lib.rs
functional-test/: Cargo.toml
functional-test/tests/: private.rs  tasks.rs
load-test/: Cargo.toml
load-test/src/scenarios/: regular.rs
loadtest/: Cargo.toml
loadtest/src/: main.rs
rust-service/: Cargo.toml  Dockerfile
service/: Cargo.toml  Dockerfile
service/resources/: config.yaml  config_development.yaml  config_docker.yaml  config_docker_stubbed.yaml  config_local.yaml  config_local_stubbed.yaml  default.yaml  log4rs.yml
service/resources/config/: config_docker_stubbed.yaml  config_local_stubbed.yaml
service/resources/templates/: index.hbs  tasks.hbs
service/src/: lib.rs  main.rs  router.rs  startup.rs
service/src/clients/: downstream_one_client.rs  healthcheck.rs  mod.rs  notion_client.rs  notion_database_client.rs
service/src/clients/middleware/: logging.rs  mod.rs  tracing.rs
service/src/clients/notion/: mod.rs  notion_db_client.rs
service/src/config/: application_config.rs  config_reader.rs  mod.rs
service/src/model/: mod.rs  notion_task.rs  task.rs
service/src/resources/: log4rs.yml
service/src/routes/: default.rs  mod.rs  private.rs  utils.rs
service/src/routes/v1/: tasks.rs
service/src/services/: healthcheck_service.rs  mod.rs  notion_service.rs
service/tests/: server_spec.rs  service_spec.rs
stub/: Dockerfile
stub/mappings/: database_healthcheck.json  database_query.json  map.json  tasks_query.json
