[package]
name = "service"
version = "0.1.0"
edition = "2021"
default-run = "service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configloader = { path = "../configloader" }
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.79"
futures-util = "0.3.30"
log = "0.4.21"
log4rs = "1.3.0"
bytes = "1.6.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.117"

# HTTP
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
http-body-util = "0.1.0"
# HTTP CLIENT
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls"] }

# TRACING
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.24.0"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = [ "rt-tokio"] }
opentelemetry-otlp = { version = "*", features = ["grpc-tonic"] }
reqwest-middleware = "0.3.1"
reqwest-tracing = { version = "0.5.0", features = ["opentelemetry_0_22"] }
lazy_static = "1.4.0"
