[package]
name = "service"
version = "0.1.0"
edition = "2021"
default-run = "service"
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configloader = { path = "../configloader" }
tokio = { version = "1.39.3", features = ["full"] }
async-trait = "0.1.81"
futures-util = "0.3.30"
log = "0.4.22"
log4rs = "1.3.0"
bytes = "1.6.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.125"
lazy_static = "1.5.0"
handlebars = "6.0.0"

# HTTP
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
http-body-util = "0.1.2"
# HTTP CLIENT
reqwest = { version = "0.12.6", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = { version = "0.3.3", features = ["json"] }


# TRACING
tracing = "0.1"
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.25.0"
opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features = [ "rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", features = ["grpc-tonic"] }
reqwest-tracing = { version = "0.5.0", features = ["opentelemetry_0_22"] }
